2007-05-21  Sebastian Dröge  <slomo@circular-chaos.org>

	* tests/check/gst/gstpad.c: (GST_START_TEST), (gst_pad_suite):
	Add unit test for the improved caps checking from bug #421543.

2007-05-21  Wim Taymans  <wim@fluendo.com>

	* docs/design/part-synchronisation.txt:
	Small addition.

	* gst/gstbin.c: (gst_bin_query):
	* plugins/elements/gstqueue.c: (apply_segment):
	Improve debugging.

	* gst/gstmessage.h:
	Improve docs.

2007-05-21  Wim Taymans  <wim@fluendo.com>

	* gst/gstpad.c: (gst_pad_get_caps_unlocked),
	(gst_pad_acceptcaps_default), (gst_pad_configure_sink),
	(gst_pad_configure_src):
	Added simple version of improved caps checking. It was previously
	assumed that a setcaps function would check the validity of the caps but
	people prefer us to check caps against the template automatically. 
	Fixes #421543.

2007-05-21  Wim Taymans  <wim@fluendo.com>

	* libs/gst/base/gstbasetransform.h:
	Fix macro for locking/unlocking the transform lock.

2007-05-19  Tim-Philipp Müller  <tim at centricular dot net>

	* docs/plugins/tmpl/.cvsignore:
	  Ignore more.

2007-05-18  Edward Hervey  <edward@fluendo.com>

	* plugins/elements/gstqueue.c: (gst_queue_loop):
	Hello, I am Mr Taymans' personal debugger. Today I will introduce a fix
	for the subtle art of warning a potentially blocking thread that it
	should check the source pad return value, and relay the information
	upstream.

2007-05-18  Edward Hervey  <edward@fluendo.com>

	* plugins/elements/gstqueue.c: (gst_queue_handle_sink_event):
	Release the queue lock !

2007-05-17  Sebastian Dröge  <slomo@circular-chaos.org>

	* docs/libs/gstreamer-libs-sections.txt:
	Add the two new controller functions to the appropiate places.

2007-05-17  Sebastian Dröge  <slomo@circular-chaos.org>

	reviewed by: Stefan Kost <ensonic@users.sf.net>

	* libs/gst/controller/gstcontroller.c:
	(gst_controller_suggest_next_sync), (gst_controller_sync_values),
	(_gst_controller_get_property), (_gst_controller_set_property),